add another file.html for users panel

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6466,7 +6466,7 @@ textarea.form-control-lg {
 }
 
 .border {
-  border: 1px solid #dee2e6 !important;
+  border: 1px solid #dee5de !important;
 }
 
 .border-0 {
